# PyTorch-PaaS

./: .gitignore  PyTorch.ipynb  README.md  check_free_tier_usage.py  config.py  get_aws_cost.py  pyproject.toml
computer_vision/image_classification/: PyTorch.ipynb  README.md  arg_parser.py  debug.ipynb  get_aws_cost.py  main.py  requirements.txt  run_training.py  train_models.py
computer_vision/image_classification/models/: base_model.py  cnn.py  densenet.py  efficientnet.py  inception.py  mobilenet.py  resnet.py  vit.py
computer_vision/image_classification/notebooks/: PyTorch.ipynb
computer_vision/image_classification/results/: results.md
computer_vision/image_classification/utils/: utils.py
