[tool.poetry]
name = "pytorch-use-cases"
version = "0.1.0"
description = ""
authors = ["AIEngineerOnDemand <giopantana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.2.0"
torchvision = "^0.17.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
timm = "^0.9.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"