[tool.poetry]
name = "Pytorch-Use-Cases"
version = "0.1.0"
description = ""
authors = ["AIEngineerOnDemand <giopantana@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.3.1"
torchvision = "^0.18.1"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
timm = "^1.0.7"
numpy = "<2.0.0"  
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"